# shulker

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
scripts/: install.ps1  install.sh
src/: cli.rs  data.rs  i18n.rs  main.rs  natfrp.rs  scheduler.rs  sys.rs  ui.rs
