[package]
name = "mc-tui"
version = "0.1.0"
edition = "2024"
description = "TUI manager for a Minecraft Paper/Purpur server"
license = "MIT"
readme = "README.md"
keywords = ["minecraft", "tui", "server", "paper", "purpur"]
categories = ["command-line-utilities", "games"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
md-5 = "0.10"
# v0.14.1 — used to HMAC the launcher's challenge for the local WebUI
# auth flow (ilsf-1-response). Same RustCrypto family as `md-5`; tiny.
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
unicode-width = "0.2"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
# v0.14 — explicit rustls dep so we can build a ClientConfig with a custom
# "trust everything" verifier for the launcher's self-signed cert at
# https://127.0.0.1:7102. ureq already pulls rustls transitively; declaring
# it here makes the types importable. Localhost-only traffic, so disabling
# cert verification is security-equivalent to a one-shot pin.
rustls = "0.23"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
