[package]
name = "shulker"
version = "1.0.0"
edition = "2024"
description = "TUI manager for a Minecraft Paper/Purpur server"
license = "MIT"
readme = "README.md"
keywords = ["minecraft", "tui", "server", "paper", "purpur"]
categories = ["command-line-utilities", "games"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
md-5 = "0.10"
# v0.14.1 — used to HMAC the launcher's challenge for the local WebUI
# auth flow (ilsf-1-response). Same RustCrypto family as `md-5`; tiny.
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
unicode-width = "0.2"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
# v0.14 — explicit rustls dep so we can build a ClientConfig with a custom
# "trust everything" verifier for the launcher's self-signed cert at
# https://127.0.0.1:7102. ureq already pulls rustls transitively; declaring
# it here makes the types importable. Localhost-only traffic, so disabling
# cert verification is security-equivalent to a one-shot pin.
rustls = "0.23"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# v0.17 — cross-platform stack. dirs picks the OS-native config dir
# (Linux ~/.config, macOS ~/Library/Application Support, Windows %APPDATA%).
# arboard replaces the wl-copy shell-out — pure Rust, no X11 C deps; the
# wayland-data-control feature gives native Wayland support. webbrowser
# replaces xdg-open. if-addrs replaces parsing `ip -4 -o addr show`.
dirs = "6"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
webbrowser = "1"
if-addrs = "0.13"
# v0.17 — Windows server console = ConPTY via portable-pty (wezterm).
# Unix uses tmux directly so we only pull this dep on Windows. portable-pty
# also abstracts Unix PTY but our Linux/macOS path keeps the existing tmux
# UX (attach-from-another-terminal, persistent across shulker restarts).
[target.'cfg(windows)'.dependencies]
portable-pty = "0.9"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
